syntax = "proto3";

import "command.proto";
import "log.proto";
import "rpc.proto";

option go_package = "github.com/sumimakito/raft/pb";

package pb;

service APIService {
  rpc Apply(LogBody) returns (ApplyLogResponse);
  rpc ApplyCommand(Command) returns (ApplyLogResponse);
}

